feat(execution): add a `system.from` label
Closes https://github.com/kestra-io/kestra-ee/issues/4699